# x86_adapt

./: CMakeLists.txt  LICENSE  README.md  cpu.py  generate-deb.sh  knob.py  prepare.py  x86_adapt_driver_template.c
debpack_template/DEBIAN/: control  postinst  prerm
debpack_template/lib/udev/rules.d/: 86-x86_adapt.rules
debpack_template/usr/src/x86_adapt_defs-template/: dkms.conf
debpack_template/usr/src/x86_adapt_driver-template/: Makefile  dkms.conf
debpack_template/usr/src/x86_adapt_driver-template/definition_driver/: Makefile
debpack_template/usr/src/x86_adapt_driver-template/src/: Makefile
definition_driver/: LICENSE  cpu.py  knob.py  prepare.py  readonly_knobs.sh  x86_adapt_defs.h  x86_adapt_defs_template.c
definition_driver/knobs/: AMD_Aggressive_Priority_to_D_Cache.txt  AMD_C1CacheFlushEn.txt  AMD_CStateCtrl0.txt  AMD_CStateCtrl1.txt  AMD_CU_Walker_Sharing_Disable.txt  AMD_CacheFlushOnHaltTmr.txt  AMD_ClkDivisor_C1.txt  AMD_ConvertPrefetchToNop.txt  AMD_CpbDis.txt  AMD_CpuVidBoost.txt  AMD_DC_REQ_CTR.txt  AMD_DblPrefEn.txt  AMD_DisL3HiPriFreeListAlloc.txt  AMD_DisLoopPredictor.txt  AMD_DisPfHwForSw.txt  AMD_Enable_MonMWait_UserSpace.txt  AMD_HW_Prefetch.txt  AMD_L3PwrSavEn.txt  AMD_L3Scrub.txt  AMD_PfcRegionDis.txt  AMD_PrefCpuDis.txt  AMD_PrefIoDis.txt  AMD_PrefOneConf.txt  AMD_PrefThreeConf.txt  AMD_RAPL_Core_Energy.txt  AMD_RAPL_Pckg_Energy.txt  AMD_RAPL_Power_Unit.txt  AMD_Speculative_DTLB.txt  AMD_Speculative_ITLB.txt  APERF.txt  INTEL_RAPL_PKG_POWER_LIMIT_1  Intel_C1_AutoDemotion_Enable.txt  Intel_C1_AutoUndemotion_Enable.txt  Intel_C3_AutoDemotion_Enable.txt  Intel_C3_AutoUndemotion_Enable.txt  Intel_CORE_C3_RESIDENCY.txt  Intel_CORE_C6_RESIDENCY.txt  Intel_CORE_C7_RESIDENCY.txt  Intel_Clock_Modulation.txt  Intel_Clock_Modulation_Control.txt  (+104 more)
definition_driver/processors/: alderlake.txt  amd_ryzen.txt  broadwell.txt  broadwell_ep.txt  broadwell_he.txt  bulldozer.txt  core2.txt  fam12h.txt  fam15h.txt  haswell.txt  intel.txt  intel_aperfmperf.txt  intel_epb.txt  intel_therm.txt  ivybridge.txt  ivybridge_he.txt  knl.txt  nehalem.txt  piledriver.txt  sandybridge_ep.txt  sandybridge_he.txt  skylake.txt  skylake_he.txt  westmere.txt
deploy/: deploy_ro.sh
dkms/: README  make_dkms.sh  make_install.sh  make_remove.sh
dkms/files/definition_driver/: dkms.conf
dkms/files/driver/: Makefile  dkms.conf
driver/: x86_adapt_driver.c
knobs/: AMD_CU_Prefetch.txt  AMD_CacheFlushTmr.txt  AMD_ClLinesToNbDis.txt  AMD_DIS_IND.txt  AMD_DisDirectedPrb.txt  AMD_DisWayFilter.txt  AMD_DramScrub.txt  AMD_L3BanMode.txt  AMD_MctWrLimit.txt  AMD_Northbridge_PState_Status.txt  AMD_PrefFixDist.txt  AMD_PrefTwoConf.txt  AMD_SpecPrefDis.txt  AMD_Stride_Prefetch.txt  Intel_C1_AutoDemotion_Enable.txt  Intel_C1_AutoUndemotion_Enable.txt  Intel_C3_AutoUndemotion_Enable.txt  Intel_Clock_Modulation_Enable.txt  Intel_Clock_Modulation_Extended_Value.txt  Intel_Core2_AL_Prefetch_Disable.txt  Intel_Core2_DCU_Prefetch_Disable.txt  Intel_Core2_HW_Prefetch_Disable.txt  Intel_DRAM_ENERGY_STATUS_CH1_HSW.txt  Intel_DRAM_ENERGY_STATUS_CH2_HSW.txt  Intel_DRAM_ENERGY_STATUS_CH3.txt  Intel_DRAM_ENERGY_STATUS_CH3_HSW.txt  Intel_Enhanced_SpeedStep.txt  Intel_Extended_Clock_Modulation_Extended.txt  Intel_MEM_ACCUMULATED_BW_CH2.txt  Intel_MEM_ACCUMULATED_BW_CH3.txt  Intel_Nhm_DCU_Prefetch_Disable.txt  Intel_Nhm_HW_Prefetch_Disable.txt  Intel_PCU_CLOCK.txt  Intel_PCU_POWER_SKU_UNIT.txt  Intel_PERF_STATUS_Core_Voltage.txt  Intel_PERF_STATUS_Current_PState.txt  Intel_PKG_C2_RESIDENCY.txt  Intel_PKG_C3_RESIDENCY.txt  Intel_Package_CState_Lock.txt  Intel_RAPL_PP1_Energy.txt  (+3 more)
processors/: amd_aperfmperf.txt  fam10h.txt  fam11h.txt  haswell_ep.txt  haswell_he.txt  intel_est.txt  intel_nx.txt  ivybridge_ep.txt  sandybridge.txt
